# python-sandbox

./: .pre-commit-config.yaml  Makefile
.github/workflows/: pre-commit.yml
capstone-project-polars-nyc-taxi/: README.md  pyproject.toml
capstone-project-polars-nyc-taxi/src/jobs/: average_distance.py  config.py  hour_pick_times.py  top_pickup_location.py
capstone-project-polars-nyc-taxi/src/tests/: test_average_distance.py  test_pickup_location.py
capstone-project-pyspark-nyc-taxi/: README.md
capstone-project-pyspark-nyc-taxi/src/: average_distance.py  hour_pick_times.py  taxi_efficiency.py  top_pickup_location.py
end-to-end-etl/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
end-to-end-etl/sql_scripts/: init.sql
end-to-end-etl/src/end_to_end/: config.py  extraction.py  load.py  main.py  process.py
end-to-end-etl/src/tests/: test_load.py  test_process.py
flink-tutorial/: Makefile  docker-compose.yml
gRPC/: pyproject.toml
gRPC/proto/: user_profile.proto
gRPC/src/: client.py  server.py  user_profile_pb2.py  user_profile_pb2_grpc.py
local-spark-cluster/: Dockerfile  Makefile  docker-compose.generated.yml  docker-compose.yaml  generate-docker-compose.sh
local-spark-cluster/requirements/: requirements.txt
local-spark-cluster/spark_apps/: spent_by_cusomer_df.py
local-spark-cluster/templates/: docker-compose.tmpl.yml  worker.tmpl.yml
snake-game/: snake.py
spark-sanbox/advanced/: degrees_of_separation.py  popular_movies.py  smililar_movies.py  super_hero.py  super_hero_2.py
spark-sanbox/basic/: customers.py  fake_friends.py  (+9 more)
spotify-etl/: main.py
web-scraper/: README.md
(+9 files in other folders)
